--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tvs-website",
   "version": "0.1.0",
+  "private": true,
   "description": "trivial space website",
   "author": "Thomas Gorny",
   "license": "MIT",
