--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.5",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "next": "^13.4.16",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.24",
-    "@types/react": "18.0.5",
-    "@types/react-dom": "18.0.1",
+    "@types/node": "^18.17.5",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.4",
-    "eslint": "8.13.0",
-    "eslint-config-next": "12.1.5",
+    "eslint": "^8.47.0",
+    "eslint-config-next": "^13.4.16",
     "postcss": "^8.4.12",
-    "prettier": "^2.6.2",
+    "prettier": "^3.0.2",
     "tailwindcss": "^3.0.24",
-    "typescript": "4.6.3"
+    "typescript": "^5.1.6"
   }
 }
