--- a/package.json
+++ b/package.json
@@ -5,27 +5,33 @@
   "description": "trivial space website",
   "author": "Thomas Gorny",
   "license": "MIT",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "^13.4.16",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "start": "vite",
+    "dev": "vite --host --port 3000",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "devDependencies": {
-    "@types/node": "^18.17.5",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "autoprefixer": "^10.4.4",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.47.0",
-    "eslint-config-next": "^13.4.16",
-    "postcss": "^8.4.12",
+    "eslint-config-standard-with-typescript": "^37.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-solid": "^0.12.1",
+    "postcss": "^8.4.24",
     "prettier": "^3.0.2",
-    "tailwindcss": "^3.0.24",
-    "typescript": "^5.1.6"
+    "solid-devtools": "^0.27.3",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.6",
+    "vite": "^4.3.9",
+    "vite-plugin-solid": "^2.7.0"
+  },
+  "dependencies": {
+    "@motionone/solid": "^10.16.2",
+    "@solidjs/router": "^0.8.3",
+    "motion": "^10.16.2",
+    "solid-js": "^1.7.6"
   }
 }
