--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "vite",
+    "start": "serve dist",
     "dev": "vite --host --port 3000",
     "build": "vite build",
     "serve": "vite preview"
@@ -32,6 +32,7 @@
     "@motionone/solid": "^10.16.2",
     "@solidjs/router": "^0.8.3",
     "motion": "^10.16.2",
+    "serve": "^14.2.0",
     "solid-js": "^1.7.6"
   }
 }
