--- a/package.json
+++ b/package.json
@@ -10,30 +10,29 @@
     "start": "serve dist",
     "dev": "vite --host --port 3000",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "types": "tsc --noEmit"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "^6.4.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.47.0",
+    "eslint": "^9.10.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-solid": "^0.13.0",
+    "eslint-plugin-solid": "^0.14.3",
     "postcss": "^8.4.24",
     "prettier": "^3.0.2",
-    "prettier-plugin-tailwindcss": "^0.5.3",
-    "solid-devtools": "^0.29.2",
+    "prettier-plugin-tailwindcss": "^0.6.6",
+    "solid-devtools": "^0.30.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.6",
-    "vite": "^4.3.9",
+    "vite": "^5.4.6",
     "vite-plugin-solid": "^2.7.0"
   },
   "dependencies": {
-    "@motionone/solid": "^10.16.2",
-    "@solidjs/router": "^0.9.1",
+    "@solidjs/router": "^0.14.5",
     "motion": "^10.16.2",
     "serve": "^14.2.0",
     "solid-heroicons": "^3.2.4",
-    "solid-js": "^1.7.6"
+    "solid-js": "^1.7.6",
+    "solid-motionone": "^1.0.1"
   }
 }
